disable unused parameter warning

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,7 @@ set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/")
 if(NOT CMAKE_BUILD_TYPE)
     set(CMAKE_BUILD_TYPE Debug)
 endif()
-add_definitions(-std=c11 -D_GNU_SOURCE)
+add_definitions(-std=c11 -Wno-unused-parameter -D_GNU_SOURCE)
 option(ENABLE_DEBUG "Build as DEBUG mode" OFF)
 if(ENABLE_DEBUG)
     add_definitions(-DTRANSOCKS_DEBUG)
