link to rt due to clock_gettime()

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,6 +13,10 @@ add_executable(transocks-wong
         src/transocks.c src/util.c src/util.h src/socks5.h src/log.c src/log.h src/context.c src/context.h src/listener.c src/listener.h src/signal.c src/signal.h src/socks5.c src/pump.c src/pump.h src/bufferpump.c src/bufferpump.h src/splicepump.c src/splicepump.h src/list.h)
 find_package(Libevent2 REQUIRED)
 target_link_libraries(transocks-wong ${LIBEVENT2_LIBRARIES})
+find_library(LIBRT rt)
+if(LIBRT)
+    target_link_libraries(transocks-wong ${LIBRT})
+endif()
 include_directories(${LIBEVENT2_INCLUDE_DIR})
 include(GNUInstallDirs)
 install(TARGETS transocks-wong DESTINATION ${CMAKE_INSTALL_BINDIR})
