cmake: refine mimalloc finding
Signed-off-by: Syrone Wong <wong.syrone@gmail.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,8 +31,9 @@ tr_list_option(WITH_MEM_ALLOCATOR "Use specified memory allocator" AUTO system m
 if (WITH_MEM_ALLOCATOR STREQUAL "mimalloc")
     message(STATUS "using memory allocator: mimalloc")
     add_definitions(-DTRANSOCKS_ALLOCATOR_USE_MIMALLOC)
-    find_package(mimalloc 1.0 REQUIRED)
-    target_link_libraries(transocks-wong mimalloc-static)
+    find_package(mimalloc REQUIRED)
+    include_directories(${MIMALLOC_INCLUDE_DIR})
+    target_link_libraries(transocks-wong ${MIMALLOC_LIBRARIES})
 elseif(WITH_MEM_ALLOCATOR STREQUAL "AUTO" OR WITH_MEM_ALLOCATOR STREQUAL "system")
     message(STATUS "using memory allocator: system")
     add_definitions(-DTRANSOCKS_ALLOCATOR_USE_SYSTEM)
